@@ -2043,12 +2043,12 @@ GEN     idealhnf_two(GEN nf, GEN vp);
 GEN     idealhnf0(GEN nf, GEN a, GEN b);
 GEN     idealintersect(GEN nf, GEN x, GEN y);
 GEN     idealinv(GEN nf, GEN ix);
-GEN     idealinv_HNF(GEN nf, GEN I);
-GEN     idealinv_HNF_Z(GEN nf, GEN I);
+GEN     idealHNF_inv(GEN nf, GEN I);
+GEN     idealHNF_inv_Z(GEN nf, GEN I);
 GEN     idealred0(GEN nf, GEN I,GEN vdir);
 GEN     idealmul(GEN nf, GEN ix, GEN iy);
 GEN     idealmul0(GEN nf, GEN ix, GEN iy, long flag);
-GEN     idealmul_HNF(GEN nf, GEN ix, GEN iy);
+GEN     idealHNF_mul(GEN nf, GEN ix, GEN iy);
 GEN     idealmulred(GEN nf, GEN ix, GEN iy);
 GEN     idealnorm(GEN nf, GEN x);
 GEN     idealnumden(GEN nf, GEN x);
