@@ -125,6 +125,8 @@ BA 18- ZpX_liftfact no longer handles extensions of Qp, use ZqX_liftfact
    19- char_rootof1 renamed to rootsof1_cx, char_rootof1_u -> rootsof1u_cx
    20- gp --test: consider that the session is not interactive
 BA 21- [libpari] rename listcreate to mklist
+   22- [libpari] rename idealinv_HNF -> idealHNF_inv, idealinv_HNF_Z
+       -> idealHNF_inv, idealmul_HNF -> idealHNF_mul
 
 Done for version 2.8.0 (released 12/08/2016):
 
